--- a/language/ko.json
+++ b/language/ko.json
@@ -46,7 +46,7 @@
       "fields": [
         {
          "label": "\"Check\" 버튼 텍스트",
-         "default": "확인"
+         "default": "정답 확인"
         },
         {
            "label": " \"Show Solution\" 버튼 텍스트",
@@ -83,7 +83,7 @@
       ]
     },
     {
-      "label": "과제가 수행되는 방법 설정",
+      "label": "동작 설정",
       "description": "이 옵션은 과제가 어떻게 수행될 지 환경을 설정합니다.",
       "fields": [
         {
